tests-integration/fixtures/checking/1781589300_typed_holes_constructor_resolution/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Shared :: Local
LocalOnly :: Local
localValue :: Local
shadowedValue :: Local
local :: Local
remote :: Remote
binderShadow :: Local -> Remote

Types
Local :: Type

Roles
Local = []

Diagnostics
error[TermHole]: Hole '?local' has inferred type: Local
  --> 14:9..14:15
   |
14 | local = ?local
   |         ^~~~~~
  trivia: LocalOnly :: Local is in scope
  trivia: Shared :: Local is in scope
  trivia: local :: Local is in scope
  trivia: localValue :: Local is in scope
  trivia: shadowedValue :: Local is in scope
error[TermHole]: Hole '?remote' has inferred type: Remote
  --> 17:10..17:17
   |
17 | remote = ?remote
   |          ^~~~~~~
  trivia: RemoteOnly :: Remote is in scope
  trivia: remote :: Remote is in scope
  trivia: remoteValue :: Remote is in scope
error[TermHole]: Hole '?binder' has inferred type: Remote
  --> 20:28..20:35
   |
20 | binderShadow remoteValue = ?binder
   |                            ^~~~~~~
  trivia: RemoteOnly :: Remote is in scope
  trivia: remote :: Remote is in scope
